--- a/class4-list-CipherSchools.html
+++ b/class4-list-CipherSchools.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Lists</title>
 </head>
 <body>
     <!--ordered list-->
@@ -14,12 +14,20 @@
         <li>mirror</li>
         <li>box</li>
     </ol>
+
+    <!-- Unordered List -->
     <ul>
-        <li>table</li>
-        <li>chair</li>
-        <li>mirror</li>
-        <li>box</li>
-    </ol> 
+        <li>Food</li>
+        <li>Car</li>
+        <li>cards</li>
+        <li>Choco</li>
     </ul>
+
+    <!-- Descriptive List -->
+    <dl>
+        <dt>Term</dt>
+        <dd>Term Description</dd>
+        <dd>Term Description</dd>
+    </dl>
 </body>
 </html>
